argocd/snuclear-dev/snuclear-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snuclear-server
  labels:
    app: snuclear-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snuclear-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: snuclear-server
    spec:
      serviceAccountName: snuclear-server-dev
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/snuclear-dev/snuclear-server:1
          name: snuclear-server
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            timeoutSeconds: 3
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: snuclear-server
spec:
  type: ClusterIP
  selector:
    app: snuclear-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: snuclear-server
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - snuclear-server-dev.wafflestudio.com
  http:
    - route:
        - destination:
            host: snuclear-server
      headers:
        request:
          set:
            X-Forwarded-Proto: "https"
